# hist-pl

./: .gitignore  README.md
analysis/: hist-pl-analysis.cabal  polh-analysis.cabal
analysis/NLP/Polh/: Analyse.hs
analysis/src/NLP/HistPL/: Analyse.hs
analysis/tools/: hist-pl-analyse.hs  polh-analyse.hs
cluster-lang/: DBSCAN-ERROR.md  NOTES.md  README.md  cluster-lang.cabal  error-analysis.md
cluster-lang/src/NLP/: ClusterLang.hs
cluster-lang/src/NLP/ClusterLang/: DisjointSet.hs  EquivRel.hs  SpecialCost.hs
cluster-lang/tools/: cluster-lang.hs
collect/: README.md  hist-pl-collect.cabal  polh-collect.cabal
collect-deprecated/tools/: polh-collect-contexts.hs
collect/src/NLP/HistPL/: Collect.hs
collect/src/NLP/HistPL/Collect/: Case.hs  Read.hs
collect/tools/: hist-pl-collect.hs
dawg/: README.md  hist-pl-dawg.cabal
dawg/src/NLP/HistPL/: DAWG.hs
deprecated/analysis/src/NLP/HistPL/: Analyse.hs
deprecated/analysis/tools/: hist-pl-analyse.hs
deprecated/cluster-lang/: cluster-lang.cabal
deprecated/cluster-lang/src/NLP/ClusterLang/: EquivRel.hs
extension/: README.md
extension/histpl/: chrome.manifest  install.rdf
extension/histpl/chrome/content/: about.xul  ff-overlay.js  ff-overlay.xul  ff-sidebar.xul  hwin.js  hwin.xul  options.xul
extension/histpl/chrome/locale/en-US/: hwin.dtd  options.dtd  overlay.dtd  overlay.properties
extension/histpl/chrome/locale/pl-PL/: about.dtd  hwin.dtd  options.dtd  overlay.dtd  overlay.properties
extension/histpl/chrome/skin/: hwin.css  overlay.css
extension/histpl/defaults/preferences/: prefs.js
fusion/: README.md  hist-pl-fusion.cabal  polh-analysis.cabal  polh-fusion.cabal
fusion/NLP/Polh/: Fusion.hs  Test.hs
fusion/src/NLP/HistPL/: Fusion.hs
fusion/tools/: hist-pl-fuse.hs  polh-fuse.hs
lang-cluster/: LICENSE  README.md  lang-cluster.cabal
lang-cluster/src/: DisjointSet.hs  Main.hs
lang-cluster/src/NLP/: ClusterLang.hs
lang-cluster/src/NLP/ClusterLang/: DBSCAN.hs
lexicon/: README.md  hist-pl-lexicon.cabal  polh-lexicon.cabal
lexicon/NLP/Polh/: Binary.hs  Types.hs  Util.hs
lexicon/NLP/Polh/LMF/: Parse.hs  Show.hs
lexicon/src/NLP/: HistPL.hs
lexicon/src/NLP/HistPL/: Binary.hs  Dict.hs  LMF.hs  Lexicon.hs  Types.hs  Util.hs
lexicon/src/NLP/HistPL/Binary/: Util.hs
lexicon/src/NLP/HistPL/LMF/: Parse.hs  Show.hs
lexicon/src/NLP/Polh/: Binary.hs  Types.hs  Util.hs
lexicon/tools/: hist-pl-binarize.hs  hist-pl-show.hs  hpl-binarize.hs  hpl-show.hs  polh-show.hs
lmf/: README.md
lmf/src/NLP/HistPL/LMF/: Parse.hs  Show.hs
misc/: README.md
misc/divide-docs/: README.md  check_consistent.hs  move_compound.hs  move_simple.hs  rm_prefs.hs
misc/divide-docs/src/NLP/HistPL/: DocIDs.hs
misc/docs-ids/: README.md
misc/hist-pl-ids/: README.md
misc/hist-pl-ids/src/NLP/HistPL/: DocIDs.hs
polh-collect/: polh-collect.cabal
polh-collect/Data/Polh/: Collect.hs
polh-collect/tools/: polh-collect.hs  polh-extract-contexts.hs  polh-test.hs
polh-lexicon/: README.md  polh-lexicon.cabal
polh-lexicon/Data/Polh/: IO.hs  Types.hs  Util.hs
polh-lexicon/NLP/Polh/: Binary.hs  LMF.hs  Util.hs
polh-lexicon/NLP/Polh/LMF/: Parse.hs
polh-lexicon/Text/Polh/: Parse.hs  Show.hs
polh-lexicon/tools/: polh-binarize.hs  polh-show.hs
poser/: Bag.hs  Entropy.hs  Poser.hs  README.md  Rules.hs  hist-pl-poser.cabal
poser/src/NLP/HistPL/: Poser.hs
poser/src/NLP/HistPL/Poser/: Bag.hs  Entropy.hs  Rules.hs  SendPOS.hs
poser/tools/: hist-pl-poser.hs
similar/: README.md  hist-pl-similar.cabal
similar/NLP/HistPL/: Similar.hs
similar/NLP/HistPL/Similar/: Cost.hs
similar/src/NLP/HistPL/: Similar.hs
similar/tools/: polh-collect.hs
transliter/: README.md  hist-pl-transliter.cabal
transliter/src/NLP/HistPL/: Transliter.hs
transliter/src/NLP/HistPL/Transliter/: Impact.hs
types/: README.md  hist-pl-types.cabal
types/src/NLP/HistPL/: Types.hs
umbrella/: README.md  hist-pl.cabal
umbrella/src/NLP/HistPL/: Analyse.hs
umbrella/tools/: .hist-pl.hs.swp  hist-pl.hs
website/: README.md  hist-pl-website.cabal  website.cabal
website/resources/public/css/: style-backup.css  style.css
website/snaplets/heist/templates/: ana.tpl  default.tpl  ext.tpl  index.tpl  lex.tpl  list.tpl  lmf.tpl  nav.tpl
website/src/: Main.hs
