name:               hist-pl-analysis
version:            0.2.0
synopsis:           Morphosyntactic analysis with HistPL dictionary
description:
    Morphosyntactic analysis using the Polish historical dictionary.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2013 IPI PAN
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/hist-pl/tree/master/analysis
build-type:         Simple

library
    hs-source-dirs:   src
    build-depends:
        base >= 4 && < 5
      , containers
      , text
      , hist-pl-lexicon >= 0.3 && < 0.4
      , hist-pl-fusion >= 0.3 && < 0.4
      , dawg >= 0.9 && < 0.10
      , polimorf >= 0.7.1 && < 0.8
      , morfeusz >= 0.4.2 && < 0.5
      , transformers

    exposed-modules:
        NLP.HistPL.Analyse

    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/kawu/hist-pl.git

-- executable hist-pl-analyse
--     build-depends:
--         binary
--       , cmdargs
--     hs-source-dirs: src, tools
--     main-is: hist-pl-analyse.hs
--     ghc-options: -Wall
