name:               cluster-lang
version:            0.1.0
synopsis:           Language clustering
description:
    Language clustering on the basis of an edit distance
    string metric and the DBSCAN algorithm.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2013 IPI PAN
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/hist-pl/tree/master/cluster-lang
build-type:         Simple

library
  hs-source-dirs: src
  exposed-modules: 
    NLP.ClusterLang
  other-modules:
    NLP.ClusterLang.DisjointSet,
    NLP.ClusterLang.DBSCAN
  build-depends:
    base            >= 4        && < 5,
    dawg            >= 0.11     && < 0.12,
    adict           >= 0.4      && < 0.5,
    polimorf        >= 0.7.3    && < 0.8,
    vector          >= 0.10     && < 0.11,
    text            >= 0.11     && < 0.12,
    transformers    >= 0.3      && < 0.4,
    primitive       >= 0.5      && < 0.6
  ghc-options: -Wall

-- executable cluster-lang
--   hs-source-dirs: src
--   main-is: Main.hs
-- 
--   build-depends:
--     base            >= 4        && < 5,
--     dawg            >= 0.11     && < 0.12,
--     adict           >= 0.4      && < 0.5,
--     polimorf        >= 0.7.3    && < 0.8,
--     vector          >= 0.10     && < 0.11,
--     text            >= 0.11     && < 0.12,
--     transformers    >= 0.3      && < 0.4,
--     primitive       >= 0.5      && < 0.6

source-repository head
    type: git
    location: https://github.com/kawu/hist-pl.git
