name:               polh-fusion
version:            0.2
synopsis:           Merging historical dictionary with PoliMorf
description:
    The library provides functions for merging historical dictionary
    with PoliMorf morphological dictionary.
license:            BSD3
license-file:       LICENSE
cabal-version:      >= 1.6
copyright:          Copyright (c) 2013 IPI PAN
author:             Jakub Waszczuk
maintainer:         waszczuk.kuba@gmail.com
stability:          experimental
category:           Natural Language Processing
homepage:           https://github.com/kawu/polh
build-type:         Simple

library
    build-depends:
        base >= 4 && < 5
      , containers
      , text
      , binary
      , text-binary
      , dawg >= 0.9 && < 0.10
      , polimorf >= 0.7 && < 0.8
      , polh-lexicon >= 0.2 && < 0.3

    exposed-modules:
        NLP.Polh.Fusion
      , NLP.Polh.Test

    ghc-options: -Wall

source-repository head
    type: git
    location: https://github.com/kawu/polh.git
