Name:               polh-collect
Version:            0.0.1
Synopsis:           Interface to a historical dictionary of polish 
License:            BSD3
License-file:       LICENSE
Author:             Jakub Waszczuk
Maintainer:         waszczuk.kuba@gmail.com
Build-type:         Simple

Exposed-modules:    Data.Polh.Collect
Build-Depends:      base
                  , vector
                  , text
                  , mtl
                  , transformers
                  , polh-lexicon
                  , tokenize
                  , transcription
                  , adict
                  , polish-language-resources
