Name:               polh-collect
Version:            0.0.1
Cabal-Version:      >= 1.2
Synopsis:           Interface to a historical dictionary of polish 
License:            BSD3
License-file:       LICENSE
Author:             Jakub Waszczuk
Maintainer:         waszczuk.kuba@gmail.com
Build-type:         Simple

Library
  Exposed-modules:    Data.Polh.Collect
  Build-Depends:      base
                    , binary
                    , vector
                    , text
                    , mtl
                    , transformers
                    , polh-lexicon
                    , tokenize
                    , transcription
                    , adict
                    , polish-language-resources

Executable polh-test
  Hs-Source-Dirs: ., tools
  Main-is: polh-test.hs
  Build-Depends:      optparse-applicative

Executable polh-collect
  Hs-Source-Dirs: ., tools
  Main-is: polh-collect.hs
  Build-Depends:      optparse-applicative

Executable polh-extract-contexts
  Hs-Source-Dirs: ., tools
  Main-is: polh-extract-contexts.hs
  Build-Depends:      optparse-applicative

Executable polh-collect-contexts
  Hs-Source-Dirs: ., tools
  Main-is: polh-collect-contexts.hs
  Build-Depends:      optparse-applicative
