Name:               polh-lexicon
Version:            0.0.1
Cabal-Version:      >= 1.2
Synopsis:           Interface to a historical dictionary of polish 
License:            BSD3
License-file:       LICENSE
Author:             Jakub Waszczuk
Maintainer:         waszczuk.kuba@gmail.com
Build-type:         Simple

Library
  Exposed-modules:    Data.Polh.Types
                      Data.Polh.IO
                      Data.Polh.Util
                      Text.Polh.Parse
                      Text.Polh.Show
  Build-Depends:      base
                    , directory
                    , filepath
                    , text
                    , binary
                    , text-binary
                    , polysoup
                    , data-lens
                    , lazy-io

Executable polh-binarize
  Hs-Source-Dirs: ., tools
  Main-is: polh-binarize.hs

Executable polh-show
  Hs-Source-Dirs: ., tools
  Main-is: polh-show.hs
