name:                hist-pl-website
version:             0.2.0
synopsis:            Website for the historical dictionary of Polish
description:
    TODO
license:             BSD3
license-file:        LICENSE
cabal-version:       >=1.2
author:              Jakub Waszczuk
maintainer:          waszczuk.kuba@gmail.com
category:            Natural Language Processing
homepage:            https://github.com/kawu/hist-pl/tree/master/website
build-type:          Simple


executable hist-pl-website
  hs-source-dirs: src
  main-is: Main.hs

  build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.11,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap                      >= 0.12  && < 0.13,
    snap-core                 >= 0.9   && < 0.11,
    snap-server               >= 0.9   && < 0.11,
    heist                     >= 0.12  && < 0.13,
    xmlhtml                   >= 0.2   && < 0.3,
    text,
    lens,
    transformers              >= 0.3   && < 0.4,
    errors                    >= 1.4   && < 3.5,
    hist-pl-lexicon           >= 0.6   && < 0.7,
    hist-pl-lmf               >= 0.1   && < 0.2,
    hist-pl-transliter        >= 0.1   && < 0.2,
    hist-pl                   >= 0.3   && < 0.4,
    pandoc                    >= 1.11  && < 1.12,
    utf8-string               >= 0.3   && < 0.4,
    containers

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
